--- a/html.html
+++ b/html.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>HTML Image as link</title>
+      <title> </title>
    </head>
    <body>
       <br>
       <a href="https://video.link/w/3zLSb">
          <img alt="Qries" src="https://www.amnh.org/var/ezflow_site/storage/images/media/amnh/images/explore/ology-images/paleontology/layers-of-time/watch-button/5015316-2-eng-US/watch-button.png"
-         width=150" height="70">
-      </a>
-   </body>
-</html>
+
